Overflow fixes

--- a/src/components/Mememaker/MemeMaker.module.css
+++ b/src/components/Mememaker/MemeMaker.module.css
@@ -1,6 +1,6 @@
 .mememaker {
   width: 100%;
-  height: 100vh;
+  height: 60rem;
   background-color: black;
   background-image: url("../Trees.jpg");
   position: relative;
@@ -39,7 +39,6 @@
 }
 
 .makerModal {
-  height: 700px;
   background-color: rgb(0, 28, 0);
   border-radius: 2rem;
   z-index: 10;
@@ -90,6 +89,7 @@
   overflow-x: scroll;
   overflow-y: hidden;
   gap: 0.5rem;
+  max-width: 500px;
 }
 
 .hidden {
@@ -147,4 +147,11 @@
 .addCta:hover {
   color: white;
   background-color: rgb(15, 15, 15);
+}
+
+.saveCta {
+  background-color: rgb(192, 11, 220);
+  padding: 1rem 0rem;
+  color: white;
+  font-size: 24px;
 }
